# MakeFractals

./: .gitignore  CMakeLists.txt  CMakeSettings.json  FractalRemake.cpp  FractalRemake.sln  FractalRemake.vcxproj  FractalRemake.vcxproj.filters  README.md  imgui.ini  save.txt
ext/: CMakeLists.txt
extlibs/glad/: glad.c
extlibs/gmp/: gmp.lib
extlibs/sdl_image/: SDL2_image.lib
include/: CMakeLists.txt  Fractal_Draw.h  Fractal_Maths.h  Fractal_Utils.h  MakeFractals.h
include/SDL2/: SDL_config.h  SDL_config_linux.h  SDL_revision.h
include/glad/: glad.h
lib/: CMakeLists.txt
lib/macOS/: libSDL2_image-2.0.0.dylib
lib/win/: SDL2main.lib
src/: CMakeLists.txt  FractalRemake.cpp  FractalRemake.h  Fractal_Draw.cpp  Fractal_Draw.h  Fractal_Maths.cpp  Fractal_Maths.h  Fractal_Utils.cpp  Fractal_Utils.h  MakeFractals.cpp
temp/: FractalRemake.rar  imgui.ini  palette-list.txt
